# async-python-sprint-5

./: .dockerignore  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
core/: pyproject.toml
core/client/: minio.py
core/connections/: __init__.py  app.py  base.py  minio.py  postgres.py  redis.py
core/database/: postgres.py  uow.py
core/database/models/: base.py  mixins.py
core/database/repository/: minio.py  postgres.py  protocol.py  redis.py
core/database/schemas/: minio.py
core/logging/: __init__.py  config.py  logger.py
core/security/: __init__.py
core/security/auth/: dependencies.py  exceptions.py  ip_checker.py  middleware.py  permissions.py  schemas.py  service.py
core/services/: waiter.py
core/utils/: __init__.py  current_timestamp.py  get_list.py  static_uuid.py
docker/: docker-compose.yml  python-base.Dockerfile
services/auth/: .env.example  Dockerfile  docker-compose.yml  pyproject.toml
services/auth/src/: alembic.ini  entrypoint.sh  gunicorn_conf.py  main.py
services/auth/src/api/v1/: __init__.py  user.py
services/auth/src/conf/: constraits.py  exceptions.py  settings.py
services/auth/src/helpers/: lifspan.py  raise_error.py  wait_for_app.py  wait_for_services.py
services/auth/src/migrations/versions/: 2025_02_11_0110-29da0efaa674_initial_migration.py  2025_02_11_2007-a1efcbf8b364_initial_migration.py
services/auth/src/models/: __init__.py  url.py  user.py
services/auth/src/repositories/: __init__.py  url.py  url_stats.py  user.py
services/auth/src/schemas/: url.py  user.py
services/auth/src/services/: __init__.py  url.py  user.py
services/auth/tests/functional/: Dockerfile  docker-compose.yml
services/auth/tests/functional/tests/: conftest.py  test_auth_flow.py  test_functional.py  tests_entrypoint.sh
services/cache/: Dockerfile  entrypoint.sh  pyproject.toml
services/files/: .env.example  Dockerfile  docker-compose.yml  pyproject.toml
services/files/src/api/v1/: __init__.py  files.py  healthcheck.py
services/files/src/conf/: settings.py
services/files/src/helpers/: wait_for_services.py
services/files/src/migrations/: env.py
services/files/src/migrations/versions/: 2025_02_23_1931-bfdc00968695_initial_migration.py
services/files/src/models/: __init__.py  file.py
services/files/src/repositories/: __init__.py  file.py  user.py
services/files/src/schemas/: file.py
services/files/src/services/: __init__.py  file.py
services/files/tests/functional/: Dockerfile  docker-compose.yml
services/files/tests/functional/tests/: conftest.py  test_files_flow.py  tests_entrypoint.sh
services/nginx/: docker-compose.yml  pyproject.toml
services/nginx/configs/: nginx.conf
services/nginx/configs/config/: site.conf
