[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[project]
dependencies = [
  "async-fastapi-jwt-auth>=0.6.6",
  "asyncpg>=0.30.0",
  "auth",
  "backoff>=2.2.1",
  "bcrypt>=4.2.1",
  "fastapi>=0.115.8",
  "httpx>=0.28.1",
  "redis>=5.2.1",
  "sqlalchemy>=2.0.38",
]
name = "core"
requires-python = ">=3.12"
version = "0.1.0"

[tool.hatch.build.targets.wheel]
packages = ["core/*"]

[tool.uv.sources]
auth = {workspace = true}
